<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout">


        <EditText
            android:background="@drawable/border"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/value1"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="@+id/value2"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintRight_toRightOf="@+id/multiply_button"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/value2"
            tools:layout_constraintBottom_creator="1" />

        <EditText
            android:background="@drawable/border"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/value2"
            app:layout_constraintLeft_toRightOf="@+id/value1"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="13dp"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/multiply_button"
            android:layout_marginBottom="20dp"
            tools:layout_constraintBottom_creator="1" />

        <Button
            android:text="Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="@+id/multiply_button" />

        <Button
            android:text="Multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiply_button"
            app:layout_constraintLeft_toRightOf="@+id/add_button"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/result_viewer"
            android:layout_marginBottom="24dp"
            tools:layout_constraintBottom_creator="1" />

        <TextView
            android:background="@drawable/border"
            android:text=""
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/result_viewer"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="169dp"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:text="Value 1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="9dp"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:text="Value 2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintLeft_toLeftOf="@+id/value2"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="9dp"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:text="Purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/purchase_button"
            app:layout_constraintLeft_toRightOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/multiply_button"
            app:layout_constraintRight_toRightOf="@+id/textView5" />
    </android.support.constraint.ConstraintLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>