<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.packt.rrafols.calculatortestexample.CalculatorActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Login"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="48dp"
        android:id="@+id/textView"
        android:textAlignment="textEnd"
        android:gravity="end|bottom"
        android:layout_gravity="end|bottom"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/login_username"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/login_username"
        tools:layout_constraintBottom_creator="1" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="48dp"
        android:id="@+id/login_username"
        app:layout_constraintLeft_toLeftOf="@+id/login_password"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/activity_calculator"
        android:layout_marginTop="48dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/login_password"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/login_password"
        android:layout_marginBottom="58dp"
        tools:layout_constraintBottom_creator="1" />

    <EditText
        android:layout_width="226dp"
        android:layout_height="42dp"
        android:inputType="textPassword"
        android:text=""
        android:ems="10"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="106dp"
        android:id="@+id/login_password"
        app:layout_constraintTop_toTopOf="@+id/activity_calculator"
        android:layout_marginTop="106dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_calculator"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:text="Password"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="106dp"
        android:id="@+id/textView4"
        android:textAlignment="textEnd"
        android:gravity="end|bottom"
        android:layout_gravity="end|bottom"
        app:layout_constraintLeft_toLeftOf="@+id/activity_calculator"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="16dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toLeftOf="@+id/login_password"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="164dp"
        android:id="@+id/login_button"
        app:layout_constraintLeft_toLeftOf="@+id/login_password"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        android:layout_marginTop="16dp"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:text=""
        android:visibility="invisible"
        android:layout_width="363dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="16dp"
        android:id="@+id/login_error_text"
        app:layout_constraintLeft_toLeftOf="@+id/activity_calculator"
        android:layout_marginLeft="16dp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintTop_toTopOf="@+id/activity_calculator"
        android:layout_marginTop="16dp"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/activity_calculator"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:paddingLeft="5dp"
        tools:layout_constraintRight_creator="0" />

</android.support.constraint.ConstraintLayout>
